force-app/main/default/objects/Expenses_Object__c/Expenses_Object__c.object-meta.xml
<CustomObject>
    <label>Expense Object</label>
    <nameField>
        <label>Expenses Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>