force-app/main/default/objects/Expenses_Object__c/fields/expense_type__c.field-meta.xml
<CustomField>
    <fullName>expense_type__c</fullName>
    <label>expense type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax HR</fullName>
            </value>
            <value>
                <fullName>Tax Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>