force-app/main/default/objects/Expenses_Object__c/fields/HR_Expense__c.field-meta.xml
<CustomField>
    <fullName>HR_Expense__c</fullName>
    <label>HR Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>