force-app/main/default/objects/Expenses_Object__c/recordTypes/Financial_record_type.recordType-meta.xml
<RecordType>
    <fullName>Financial_record_type</fullName>
    <active>true</active>
    <description>record type for finance team</description>
    <label>Financial record type</label>
</RecordType>