force-app/main/default/objects/Expenses_Object__c/recordTypes/HR_Record_type1.recordType-meta.xml
<RecordType>
    <fullName>HR_Record_type1</fullName>
    <active>true</active>
    <label>HR Record type1</label>
</RecordType>